feat: add app lock security, fix unlock bug, implement zero-trace preview, and update license to CC BY-NC 4.0

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">MED Encoder</string>
-    <string name="title_activity_main">MED Encoder</string>
+    <string name="app_name">MED Secure Vault</string>
+    <string name="title_activity_main">MED Secure Vault</string>
     <string name="package_name">com.med.encoder</string>
     <string name="custom_url_scheme">com.med.encoder</string>
 </resources>
